2005-08-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* weather_none.C, weather_std.C:
	* weather.h, weather_simple.C (daily_precipitation): New function.

2005-08-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* bioclimate_std.C, bioclimate.h (daily_precipitation): New
	virtual member function.
	* column_base.C, column_base.h, column.h (daily_precipitation,
	daily_global_radiation):  Ditto.
	* field.h, field.C (daily_precipitation, daily_global_radiation):
	Ditto. 

	* action_markvand.C: New model.
	* Makefile (MODELS): Added it.

	* condition_crop.C (ConditionDSAfter::match): Added const

2005-08-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* om.C (load_syntax): New 'frac_desc' parameter.
	* aom.C, smb.C, som.C (load_syntax): Update caller.

2005-07-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lexer_data.h: Fixed comment.

2005-07-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.76 released.

2005-07-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai ("Weather"): Removed bogus column.

	* weather_std.C (read_new_day): Fix calculation of time for
	minimum temperature.

2005-07-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (load_derived): Support default type for backward
	compatibility. 

	* photosynthesis.C, photosynthesis.h: Removed submodel.
	* photo.C, photo.h: New component.
	* photo_GL.C: New model.
	* Makefile (MODELS, COMPONENTS, SUBMODELS): Updated.

2005-07-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* program_gnuplot.C: New model.

2005-06-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.75 released.

2005-06-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_harvest.C (doIt): Disable check for emergence when
	harvesting "all". 

2005-06-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select_interval.C, select.h (check_border): New virtual member
	function. 
	* log_select.C (check): Call it.

2005-06-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil.C (border): New parameter.
