@@ -16,6 +16,8 @@ release.
 
 ** doc fix
 
+** Ep was overstimated for LAI around 1.
+
 * 3.76
 
 ** Photosynthesis made a component.
